--- a/account.html
+++ b/account.html
@@ -47,37 +47,40 @@
   </style>
 </head>
 <body>
-   <header>
-       <nav class="navbar navbar-expand-lg bg-body-tertiary">
-           <div class="container-fluid">
-             <a class="navbar-brand" href="/index-1.html">Homepage</a>
-             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-             </button>
-             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav">
-                 <li class="nav-item">
-                   <a class="nav-link active" aria-current="page" href="/shop.html">Shop</a>
-                 </li>
-                 <li class="nav-item">
-                   <a class="nav-link" href="/about.html">About</a>
-                 </li>
-                 <li class="nav-item">
-                 <li class="nav-item dropdown">
-                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                     More Items
-                   </a>
-                   <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="/services.html">Services</a></li>
-                     <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
-                     <li><a class="dropdown-item" href="/account.html">Account</a></li>
-                   </ul>
-                 </li>
-               </ul>
-             </div>
-           </div>
-         </nav>
-   </header>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/index-1.html">Homepage</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+                aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/blog.html">Art Ideas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button"
+                 data-bs-toggle="dropdown" aria-expanded="false">
+                More Items
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/shop.html">Shop</a></li>
+                <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
+                <li><a class="dropdown-item" href="/account.html">Account</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
    <main class="d-flex flex-column align-items-center justify-content-center text-center" style="height: 80vh;">
     <h1 class="mb-4">Account Features Coming Soon!</h1>
     <p class="lead mb-3">We're working on personalized tools just for you—stay tuned!</p>
