--- a/contact.html
+++ b/contact.html
@@ -3,50 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account</title>
+    <title>Contact Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="css/style.css">
+          rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
+    
+    <style>
+        body {
+            background-color: #fdfdfd;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
 
-   <style>
-    /* Embedded CSS for the account mockup */
-    body {
-      background-color: #fdfdfd;
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+        header {
+            background-color: #b2f0ed;
+            border-bottom: 2px solid rgb(2, 255, 255);
+        }
 
-    main {
-      height: 80vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 40px;
-    }
+        main {
+            padding: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
 
-    h1 {
-      font-size: 2rem;
-      font-weight: 600;
-      color: #333;
-      margin-bottom: 20px;
-    }
+        .contact-section {
+            width: 100%;
+            max-width: 600px;
+            text-align: center;
+            margin-bottom: 40px;
+        }
 
-    p.lead {
-      color: #666;
-      font-size: 1.1rem;
-      margin-bottom: 30px;
-    }
+        .contact-section h2 {
+            color: #00554e;
+            margin-bottom: 20px;
+        }
 
-    img {
-      max-width: 300px;
-    }
-  </style>
+        .contact-section p {
+            color: #333;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        footer {
+            background-color: #b2f0ed;
+            padding: 1.5rem 0;
+            text-align: center;
+            color: #00554e;
+            border-top: 2px solid rgb(2, 255, 255);
+        }
+    </style>
 </head>
 <body>
+
+  <!-- Navigation -->
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -59,12 +79,11 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/blog.html">Art Ideas</a>
+              <a class="nav-link active" href="/blog.html">Art Ideas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
             </li>
-            <li class="nav-item">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button"
                  data-bs-toggle="dropdown" aria-expanded="false">
@@ -81,13 +100,39 @@
       </div>
     </nav>
   </header>
-   <main class="d-flex flex-column align-items-center justify-content-center text-center" style="height: 80vh;">
-    <h1 class="mb-4">Account Features Coming Soon!</h1>
-    <p class="lead mb-3">We're working on personalized tools just for you—stay tuned!</p>
-    <img src="/pictures/under-construction.svg" alt="Under construction" style="max-width: 300px;">
+
+  <!-- Main Content Section -->
+  <main>
+    <section class="contact-section">
+      <h2>Contact Us</h2>
+      <p>We'd love to hear from you! Please fill out the form below to get in touch with us.</p>
+
+      <!-- Contact Form -->
+      <form action="/submit-form" method="POST">
+        <div class="form-group">
+          <label for="name">Your Name:</label>
+          <input type="text" id="name" name="name" placeholder="Your name" required>
+        </div>
+        
+        <div class="form-group">
+          <label for="email">Your Email:</label>
+          <input type="email" id="email" name="email" placeholder="Your email" required>
+        </div>
+
+        <div class="form-group">
+          <label for="message">Your Message:</label>
+          <textarea id="message" name="message" rows="5" placeholder="Your message" required></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </section>
   </main>
-   <footer class="footer">
-    <p>Copyright 2025 Animation Class</p>
-</footer>   
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Animation Class | All rights reserved</p>
+  </footer>
+
 </body>
 </html>
