--- a/account.html
+++ b/account.html
@@ -1,93 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Account features coming soon, stay tuned for personalized tools!">
+    <meta name="robots" content="index, follow">
     <title>Account</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="css/style.css">
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+          crossorigin="anonymous">
 
-   <style>
-    /* Embedded CSS for the account mockup */
-    body {
-      background-color: #fdfdfd;
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+            crossorigin="anonymous"></script>
 
-    main {
-      height: 80vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 40px;
-    }
+    <style>
+        /* Embedded CSS for the account page */
+        body {
+            background-color: #fdfdfd;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
 
-    h1 {
-      font-size: 2rem;
-      font-weight: 600;
-      color: #333;
-      margin-bottom: 20px;
-    }
+        main {
+            height: 80vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 40px;
+        }
 
-    p.lead {
-      color: #666;
-      font-size: 1.1rem;
-      margin-bottom: 30px;
-    }
+        h1 {
+            font-size: 2rem;
+            font-weight: 600;
+            color: #333;
+            margin-bottom: 20px;
+        }
 
-    img {
-      max-width: 300px;
-    }
-  </style>
+        p.lead {
+            color: #666;
+            font-size: 1.1rem;
+            margin-bottom: 30px;
+        }
+
+        img {
+            max-width: 100%;
+            width: 300px;
+        }
+
+        footer {
+            background-color: #f8f9fa;
+            text-align: center;
+            padding: 20px;
+            font-size: 0.9rem;
+            color: #333;
+        }
+    </style>
 </head>
+
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/index-1.html">Homepage</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-                aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/blog.html">Art Ideas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
-            </li>
-            <li class="nav-item">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button"
-                 data-bs-toggle="dropdown" aria-expanded="false">
-                More Items
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/shop.html">Shop</a></li>
-                <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
-                <li><a class="dropdown-item" href="/account.html">Account</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-   <main class="d-flex flex-column align-items-center justify-content-center text-center" style="height: 80vh;">
-    <h1 class="mb-4">Account Features Coming Soon!</h1>
-    <p class="lead mb-3">We're working on personalized tools just for you—stay tuned!</p>
-    <img src="/pictures/under-construction.svg" alt="Under construction" style="max-width: 300px;">
-  </main>
-   <footer class="footer">
-    <p>Copyright 2025 Animation Class</p>
-</footer>   
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index-1.html">Homepage</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/blog.html">Art Ideas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about.html">About</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                More Items
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/shop.html">Shop</a></li>
+                                <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
+                                <li><a class="dropdown-item" href="/account.html">Account</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main class="d-flex flex-column align-items-center justify-content-center text-center">
+        <h1 class="mb-4">Account Features Coming Soon!</h1>
+        <p class="lead mb-3">We're working on personalized tools just for you—stay tuned!</p>
+        <img src="pictures/comingsoon.jpg" alt="Under construction">
+    </main>
+
+    <footer class="footer">
+        <p>&copy; 2025 Animation Class</p>
+    </footer>
 </body>
+
 </html>
